<?xml version="1.0"?>

    <resources>

    <string name="app_name">My Application</string>

    <string name="email_address">Email Address</string>

    <string name="email_addressS">Email Address</string>

    <string name="user_name">Username</string>

    <string name="password">Password</string>

    <string name="passwordS">Password</string>

    <string name="repeat_password">Repeat Password</string>

    <string name="login_now">Login Now</string>

    <string name="sign_up_now">Sign up Now</string>

    <string name="don_t_remember_password">Don\'t Remember password?</string>

    <string name="dont_have_an_account">Don\'t have an account?</string>

    <string name="sign_in_with_facebook">Sign in with Facebook</string>

    <string name="or">or</string>

    <string name="title_activity_signnup">Sign up</string>

    <string name="prompt_email">Email</string>

    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in or register</string>

    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome !"</string>

    <string name="invalid_username">Not a valid username</string>

    <string name="invalid_password">Password must be >5 characters</string>

    <string name="login_failed">"Login failed"</string>

    <string name="have_an_account">Already Have An Account!</string>

</resources>