<?xml version="1.0" encoding="UTF-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".hellotest">

    <TextView
        android:id="@+id/SignUP_Head"
        android:layout_width="263dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UserNameS0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/et_bg"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="14dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/SignUP_Head" />

    <EditText
        android:id="@+id/EmailS0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/et_bg"
        android:hint="@string/email_addressS"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/UserNameS0" />

    <EditText
        android:id="@+id/PassS0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/passwordS"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/EmailS0" />

    <EditText
        android:id="@+id/PassReS0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/PassS0" />

    <Button
        android:id="@+id/SignBttnUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/sign_up_now"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"
        app:layout_constraintBottom_toTopOf="@+id/D1S0"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/PassReS0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="385dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="385dp" />

    <View
        android:id="@+id/View453"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Bcktolgn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:text="@string/have_an_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/View453"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Fb_loginS0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_if_square_facebook"
        android:drawablePadding="8dp"
        android:text="@string/sign_in_with_facebook"
        android:textColor="@color/login_form_details"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Bcktolgn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/D1S0" />

    <View
        android:id="@+id/L1S0"
        android:layout_width="120dp"
        android:layout_height="3dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toTopOf="@+id/Fb_loginS0"
        app:layout_constraintEnd_toStartOf="@+id/D1S0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/SignBttnUp" />

    <View
        android:id="@+id/L2S0"
        android:layout_width="120dp"
        android:layout_height="3dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toTopOf="@+id/Fb_loginS0"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/D1S0"
        app:layout_constraintTop_toBottomOf="@+id/SignBttnUp" />

    <TextView
        android:id="@+id/D1S0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/login_form_details"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Fb_loginS0"
        app:layout_constraintEnd_toStartOf="@+id/L2S0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/L1S0"
        app:layout_constraintTop_toBottomOf="@+id/SignBttnUp" />

</androidx.constraintlayout.widget.ConstraintLayout>